objects/copado__Promoted_User_Story__c.object
<CustomObject>
    <fields>
        <fullName>Is_back_promotion__c</fullName>
        <description>Checks to see if the promotion tied to the promoted user story is a back promotion</description>
        <formula>copado__Promotion__r.copado__Back_Promotion__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is back promotion</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Promotion_status__c</fullName>
        <description>Status of the promotion</description>
        <formula>text(copado__Promotion__r.copado__Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Promotion status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Promotion__c</fullName>
        <label>Promotion</label>
        <referenceTo>copado__Promotion__c</referenceTo>
        <relationshipLabel>Promoted User Stories</relationshipLabel>
        <relationshipName>Promoted_User_Stories</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>copado__User_Story__c</fullName>
        <label>User Story</label>
        <referenceTo>copado__User_Story__c</referenceTo>
        <relationshipLabel>User Story Promotions</relationshipLabel>
        <relationshipName>Promoted_User_Stories</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Promoted User Story</label>
    <nameField>
        <label>Promoted User Story Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Promoted User Stories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>